--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Control de Gastos, Vite + React + TS + useReducer + Context API</title>
+    <title>
+      Control de Gastos, Vite + React + TS + useReducer + Context API
+    </title>
   </head>
   <body className="bg-slate-100">
     <div id="root"></div>
